# libE57Format

./: .clang-format  .travis.yml  CHANGELOG.MD  CHANGELOG.md  CHANGES.TXT  CMakeLists.txt  ExampleUse.cpp  README.MD  README.TXT  README.md  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/conda/: environment.yml
.github/workflows/: build.yml  format-check.yml
cmake/: CompilerWarnings.cmake  E57ExportHeader.cmake  E57Format-config.cmake  GitInfo.cmake  Sanitizers.cmake  Tags.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake
cmake/Modules/: CMakeGenerateDocumentation.cmake  ClangFormat.cmake  E57ExportHeader.cmake  FindICU.cmake  FindXerces.cmake  Tags.cmake
examples/: CMakeLists.txt
examples/src/: ReadImages.cpp  ReadPanoImage.cpp
include/: CMakeLists.txt  E57Config.h  E57Exception.h  E57Format.h  E57Foundation.h  E57Simple.h  E57SimpleData.h  E57SimpleDataExtensions.h  E57SimpleReader.h  E57SimpleWriter.h  E57Version.h  LASReader.h  config.h.in
include/time_conversion/: basictypes.h  constants.h  gnss_error.h  time_conversion.h
src/: BlobNode.cpp  BlobNodeImpl.cpp  BlobNodeImpl.h  CMakeLists.txt  CheckedFile.cpp  CheckedFile.h  Common.cpp  Common.h  CompressedVectorNode.cpp  CompressedVectorNodeImpl.cpp  CompressedVectorNodeImpl.h  CompressedVectorReader.cpp  CompressedVectorReaderImpl.cpp  CompressedVectorReaderImpl.h  CompressedVectorWriter.cpp  CompressedVectorWriterImpl.cpp  CompressedVectorWriterImpl.h  DecodeChannel.cpp  DecodeChannel.h  Decoder.cpp  Decoder.h  E57Exception.cpp  E57Format.cpp  E57FormatImpl.cpp  E57FormatImpl.h  E57Foundation.cpp  E57FoundationImpl.cpp  E57FoundationImpl.h  E57Simple.cpp  E57SimpleData.cpp  E57SimpleImpl.cpp  E57SimpleImpl.h  E57SimpleReader.cpp  E57SimpleWriter.cpp  E57Version.h  E57XmlParser.cpp  E57XmlParser.h  Encoder.cpp  Encoder.h  FloatNode.cpp  (+36 more)
src/LASReader/: LASReader.cpp
src/examples/: DemoRead01.cpp  DemoWrite01.cpp
src/refimpl/: E57Foundation.cpp  E57FoundationImpl.cpp  E57FoundationImpl.h  E57RefImplConfig.cmake  E57Simple.cpp  E57SimpleImpl.cpp  E57SimpleImpl.h
src/time_conversion/: time_conversion.c
src/tools/: e57_v0_6.rnc  e57fields.cpp  e57unpack.cpp  e57validate.cpp  e57xmldump.cpp  las2e57.cpp
test/: CMakeLists.txt  README.md
test/include/: CMakeLists.txt  Helpers.h
test/src/: CMakeLists.txt  Helpers.cpp  RandomNum.cpp  TestData.cpp  main.cpp  test_ImageFile.cpp  test_SimpleData.cpp  test_SimpleReader.cpp  test_SimpleWriter.cpp  test_StringFunctions.cpp  test_extension_DIST.cpp
